--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ h1 {
 
 
 body {
-	background-image: url('images/background.jpeg');
     background-size: 110%;
     background-repeat: no-repeat;
     background-position: center;
@@ -95,6 +94,7 @@ iframe {
     border-radius: 5px;
 }
 
-#text {
 
+p {
+	text-align: center;
 }
